# DDCCI

./: DDCCI.cabal  LICENSE  README.md
src/: DDCCI.hs
src/cbits/: i2c.c
