name:                DDCCI
version:             0.1.0.0
synopsis:            DDC/CI library for Haskell
description:         DDC/CI library for Haskell
homepage:            https://dmarto.com/DDDCCI
license:             BSD3
license-file:        LICENSE
author:              Martin Dimov
maintainer:          martin@dmarto.com
copyright:           Martin Dimov
category:            Hardware, DDC/CI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: DDCCI
  hs-source-dirs:      src
  c-sources:           src/cbits/i2c.c
  build-depends:       base >=4.10 && <4.11, unix
  default-language:    Haskell2010
